Make a default style

--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
     </section>
 
     <app-toggle-button class="secondary" is-visible>
-        <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
-      </app-toggle-button>
+      <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
+    </app-toggle-button>
+    
+    <app-toggle-button is-visible>
+      <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
+    </app-toggle-button>
   </body>
 </html>
